# infino

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  api-parity.txt  build.rs  context7.json  llms.txt  public-api.txt
.github/scripts/: bench_summary.py  resolve_cpuset.sh
benches/: README.md
benches/utils/: Cargo.toml  cold_store.rs  concurrent.rs  corpus.rs  cost.rs  cpu.rs  dataset.rs  diag_common.rs  executors.rs  fts_diag.rs  fts_superfile.rs  markdown.rs  mod.rs  report.rs  rss.rs  rustfs_server.rs  scale.rs  sql_diag.rs  storage_meter.rs  superfile.rs  supertable.rs  supertable_update.rs  tiers.rs  tombstone_overhead.rs  unified_object_store.rs  vector_superfile.rs
benches/utils/bench/supertable/: query.rs
benches/utils/corpus/: combined.rs  grading.rs
benches/utils/fixture/: mod.rs  supertable.rs
benches/utils/harness/: driver.rs  infino_engine.rs  infino_sql_engine.rs  infino_vector_engine.rs  mod.rs  sql_driver.rs  vector_driver.rs
benches/utils/ingest/: mod.rs  supertable.rs
docs/: faq.md  tradeoffs.md  versioning.md
examples/: demo.rs  profile_fts_build.rs
infino-node/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
infino-python/: Cargo.toml  README.md
scripts/: check_api_parity.py  check_version_sync.py  release_prep.py  test_check_version_sync.py  test_release_prep.py
src/: error.rs  lib.rs  runtime_bridge.rs
tests/: connection_memory_budget_concurrent.rs  license_audit.rs  supertable_commit_crash_localfs.rs  supertable_concurrent_processes.rs
(+249 files in other folders)
