[package]
name = "infino-bench-utils"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
path = "mod.rs"
bench = false

[[bin]]
name = "profile_superfile"
path = "bin/profile_superfile.rs"
bench = false


[dependencies]
arrow-array = "58"
arrow-schema = "58"
async-trait = "0.1"
bytemuck = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
datafusion = "54"
futures = "0.3"
infino = { path = "../..", features = ["test-helpers"] }
memmap2 = "0.9"
num_cpus = "1"
object_store = { version = "0.13", features = ["aws"] }
parquet = "58"
rand = "0.10"
rand_distr = "0.6"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }

# RustFS local bench backend (`rustfs_server.rs`):
# rcgen — generate bench-local TLS CA + server cert (no openssl CLI / sudo).
# zip — extract pinned RustFS release archives downloaded from GitHub.
# reqwest — blocking HTTPS for release download, /health poll, and CreateBucket.
# sha2 / hmac / hex — verify upstream SHA256SUMS and sign SigV4 CreateBucket.
rcgen = "0.14"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
